<resources>
    <string name="app_name">Viva</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_">Loading ...</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="no_internet_connection"> No Internet Connection</string>
    <string name="addFriendFromFacebook">ADD FRIENDS FROM FACEBOOK</string>
    <string name="createBrandNew">Create a brand new event \n or select a previous event \n to use it as a template</string>
    <string name="addFriendFromGoogle">ADD FRIENDS FROM GOOGLE+</string>
    <string name="startFromScratch">START FROM SCRATCH</string>
    <string name="addFriendFromAddressBook">ADD FRIENDS FROM ADDRESS BOOK</string>
    <string name="usePreviousEvent">USE A PREVIOUS EVENTS</string>
    <string name="addFriendBySearchingViva">ADD FRIENDS BY SEARCHING VIVA</string>
    <string name="followingOrganiser">FOLLOWING \nORGANISER</string>
    <string name="eventName">THE BIG FOOZLE \n OPEN MIC</string>
    <string name="inviteFriends">INVITE \n FRIENDS </string>
    <string name="message_notification">Message Notification</string>
    <string name="voice">Voice</string>
    <string name="vibrate">Vibrate</string>
    <string name="connectfb">Connect with Facebook</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="blocked_list">Blocked Users</string>
    <string name="account_del_terms">I understand that once the account has been deleted, it cannot be recovered.</string>
    <string name="rate">Rate Viva</string>
    <string name="aboutCruz">About Viva</string>
    <string name="amp">\@</string>
    <string name="facebook_id">1045471188841495</string>
    <string name="facebook_id_dhiraj">103915550005707</string>

    <string-array name="Month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Day">
        <item>Day</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>


    </string-array>


    <string name="title_activity_friends_list">FriendsList</string>
    <string name="share_status_button">Share status</string>
    <string name="logged_as_text">Currently logged as</string>
    <string name="revoke_access_button">Revoke Access</string>
    <string name="sing_out_button">Sign Out</string>
    <string name="no_user_text">No user</string>
    <string name="user_picture">User picture</string>
    <string name="friends_list_button">Go to friends list</string>
    <string name="no_contact_text">No contact data found for the connected account</string>


</resources>
