<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

<include layout="@layout/tool_bar"></include>
    <LinearLayout
        android:id="@+id/addFriendFacebook"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:background="#283461"
        android:orientation="horizontal" >

        <viva.oneplatinum.com.viva.widgets.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/addFriendFromFacebook"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/addFriendGoogle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#c51f4a"
        android:orientation="horizontal" >

        <viva.oneplatinum.com.viva.widgets.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/addFriendFromGoogle"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/addFriendAddressBook"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#f47321"
        android:orientation="horizontal" >

        <viva.oneplatinum.com.viva.widgets.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/addFriendFromAddressBook"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:id="@+id/addFriendViva"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:background="#764f9f"
    android:orientation="horizontal" >

        <viva.oneplatinum.com.viva.widgets.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/addFriendBySearchingViva"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>