<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar"></include>



        <viva.oneplatinum.com.viva.widgets.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3dp"
            android:text="@string/createBrandNew"
            android:textColor="@color/txt_color_default"
            android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/startFromScratch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#c51f4a"
        android:gravity="center"
        android:orientation="horizontal">

        <viva.oneplatinum.com.viva.widgets.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/startFromScratch"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/useaPreviousEvent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#29bdc2"
        android:gravity="center"
        android:orientation="horizontal">

        <viva.oneplatinum.com.viva.widgets.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/usePreviousEvent"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>