<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <include layout="@layout/tool_bar"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/red" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal" >

                <viva.oneplatinum.com.viva.widgets.RobotoRegularTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="@string/message_notification"
                    android:textColor="@color/txt_color_default"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/mes_notif_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal" >

                <viva.oneplatinum.com.viva.widgets.RobotoRegularTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="@string/voice"
                    android:textColor="@color/txt_color_default"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/voice_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal" >

                <viva.oneplatinum.com.viva.widgets.RobotoRegularTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_weight="1"
                    android:text="@string/vibrate"
                    android:textColor="@color/txt_color_default"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/vib_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/red" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/setProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/connectfb"
                android:textColor="@color/Blue"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/connectfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@android:color/white"
            android:focusable="false"
            android:orientation="horizontal" 
            android:visibility="visible">

            <TextView
                android:id="@+id/connectfbtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/connectfb"
                android:textColor="@color/Blue"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:focusable="false"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/rate"
                android:textColor="@color/Blue"
                android:textSize="16sp" />
        </LinearLayout>

         <LinearLayout
             android:id="@+id/about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:background="@android:color/white"
             android:focusable="false"
             android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/aboutCruz"
                android:textColor="@color/Blue"
                android:textSize="16sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:focusable="false"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/change_password"
                android:textColor="@color/Blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/del_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:focusable="false"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/delete_account"
                android:textColor="@color/red"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:focusable="false"
            android:orientation="horizontal"
            android:visibility="visible" >

            <TextView
                android:id="@+id/menuLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:text="LOGOUT"
                android:textSize="18sp"
                android:textColor="@color/red" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>